# govbid

./: .gitignore  .pre-commit-config.yaml  README.md  project_plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: project_outline.md
docs/CanadaBuys/: awards.json  newTenderNotice-nouvelAvisAppelOffres.csv  opportunities.json
src/govbid/: __init__.py  canada_buys.py  config.py  exceptions.py  history.py  main.py  models.py  sam_client.py
tests/: test_basic.py  test_canada_buys.py  test_models.py  test_sam_history.py
